# paarka

./: .gitignore  paarka.cabal  readme.md
client/: README.md  package-lock.json  package.json  tailwind.config.js
client/pages/: _app.js  create-item.js  index.js  login.js  movies.json  my-assets.js
client/pages/buy/: [id].js
docs/: Paarka.postman_collection.json
server/: package-lock.json  package.json  readme.md  server.js  storage.js
server/lib/: startSale.js
server/models/: Media.js  MediaOwner.js  User.js
server/routes/: auth.js  buy.js  mint.js  restricted.js  startSale.js  validations.js  veryfyToken.js
smart-contracts/: cabal.project  hie.yaml  paarka.cabal  readme.md
smart-contracts/app/: paarka-pab.hs
smart-contracts/src/: NFT.hs  Paarka.hs
smart-contracts/src/NFT/: OffChain.hs  OnChain.hs  Trace.hs
smart-contracts/src/Paarka/: AccessToken.hs  NFT.hs  OffChain.hs  OnChain.hs  PAB.hs  Paarka.hs  PaarkaCoin.hs  Trace.hs  Types.hs  Utils.hs
src/Paarka/: AccessToken.hs  Paarka.hs  PaarkaCoin.hs  Utils.hs
