cabal-version:      2.4
name:               paarka
version:            0.1.0.0
synopsis:           Paarka
license:            NONE
author:             Jorge Orozco
maintainer:         jorge.orosan@gmail.com

extra-source-files: CHANGELOG.md

library
    hs-source-dirs:      src
    exposed-modules:   Paarka.Paarka
                     , Paarka.PaarkaCoin
                     , Paarka.AccessToken
                     , Paarka.Utils
                     , Paarka.NFT
    build-depends:     aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
    default-language: Haskell2010
    ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
