cabal-version:      2.4
name:               paarka
version:            0.1.0.0
synopsis:           Paarka
license:            NONE
author:             Jorge Orozco
maintainer:         jorge.orosan@gmail.com

extra-source-files: CHANGELOG.md

library
    hs-source-dirs:      src
    exposed-modules:   Paarka
                     , Paarka.PaarkaCoin
                     , Paarka.AccessToken
                     , Paarka.Utils
                     , Paarka.OffChain
                     , Paarka.OnChain
                     , Paarka.Trace
                     , Paarka.Types
                     , NFT
                     , NFT.OffChain
                     , NFT.OnChain
                     , NFT.Trace
    build-depends:     aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-chain-index
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , prettyprinter ^>=1.7.0
                     , text
    default-language: Haskell2010
    ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable paarka-pab
  main-is: paarka-pab.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , data-default
                     , freer-extras
                     , freer-simple
                     , playground-common ^>= 0.1.0.0
                     , plutus-contract
                     , plutus-ledger
                     , plutus-pab
                     , paarka
                     , plutus-use-cases
                     , plutus-tx
                     , purescript-bridge
                     , prettyprinter ^>=1.7.0
                     , text
